ratio bouton + corrected date

--- a/Preprocess/Data_Analysis_M1.ipynb
+++ b/Preprocess/Data_Analysis_M1.ipynb
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -2340,7 +2340,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,16 +2351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stacked_movies.to_csv('stacked_movies.csv')"
+    "stacked_movies.to_csv('stacked_movies.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2480,11 +2480,11 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>tt0001892</td>\n",
        "      <td>1911</td>\n",
        "      <td>Drama</td>\n",
-       "      <td>Denmark</td>\n",
+       "      <td>Germany</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2499,10 +2499,10 @@
        "1     tt0000574    1906      Crime  Australia      NaN       NaN         NaN\n",
        "2     tt0000574    1906      Drama  Australia      NaN       NaN         NaN\n",
        "3     tt0001892    1911      Drama    Germany      NaN       NaN         NaN\n",
-       "5     tt0001892    1911      Drama    Denmark      NaN       NaN         NaN"
+       "4     tt0001892    1911      Drama    Germany      NaN       NaN         NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,10 +2552,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3112931\n",
+      "81234\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\emmal\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdb_title_id</th>\n",
+       "      <th>year_x</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>country</th>\n",
+       "      <th>isWinner</th>\n",
+       "      <th>isPrimary</th>\n",
+       "      <th>isSecondary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>tt0000574</td>\n",
+       "      <td>1906</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>tt0001892</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>tt0002101</td>\n",
+       "      <td>1912</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>tt0002130</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>tt0002199</td>\n",
+       "      <td>1912</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   imdb_title_id  year_x      genre                   country isWinner  \\\n",
+       "0      tt0000574    1906  Biography                 Australia      NaN   \n",
+       "3      tt0001892    1911      Drama                   Germany      NaN   \n",
+       "7      tt0002101    1912      Drama  United States of America      NaN   \n",
+       "9      tt0002130    1911  Adventure                     Italy      NaN   \n",
+       "12     tt0002199    1912  Biography  United States of America     True   \n",
+       "\n",
+       "   isPrimary isSecondary  \n",
+       "0        NaN         NaN  \n",
+       "3        NaN         NaN  \n",
+       "7        NaN         NaN  \n",
+       "9        NaN         NaN  \n",
+       "12      True       False  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(stacked_movies_awards))\n",
+    "stacked_movies_awards.drop_duplicates(subset='imdb_title_id',inplace=True)\n",
+    "print(len(stacked_movies_awards))\n",
+    "stacked_movies_awards.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "stacked_movies_awards.to_csv('stacked_movies_awards.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
