--- a/Preprocess/Data_Analysis_M1.ipynb
+++ b/Preprocess/Data_Analysis_M1.ipynb
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,33 +2334,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "stacked_movies = stacked_movies.replace({'Biography': 'Documentary', 'Film-Noir':'Crime', 'Mystery':'Crime', 'Horror':'Thriller', 'Musical':'Music', 'Game-Show':'Reality-TV'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "imdb_title_id    212668\n",
-       "year             212668\n",
-       "genre            212668\n",
-       "country          212668\n",
-       "dtype: int64"
+       "array(['Documentary', 'Crime', 'Drama', 'History', 'Adventure', 'Fantasy',\n",
+       "       'Romance', 'War', 'Thriller', 'Western', 'Comedy', 'Family',\n",
+       "       'Action', 'Sci-Fi', 'Sport', 'Animation', 'Music', 'Adult',\n",
+       "       'Reality-TV', 'News'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stacked_movies.count()"
+    "stacked_movies.genre.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,25 +2377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\emmal\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3020: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "awards = pd.read_csv('../data/awards.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2396,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2452,7 +2451,7 @@
        "      <td>0</td>\n",
        "      <td>tt0000574</td>\n",
        "      <td>1906</td>\n",
-       "      <td>Biography</td>\n",
+       "      <td>Documentary</td>\n",
        "      <td>Australia</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2493,7 +2492,7 @@
        "      <td>tt0001892</td>\n",
        "      <td>1911</td>\n",
        "      <td>Drama</td>\n",
-       "      <td>Germany</td>\n",
+       "      <td>Denmark</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -2503,15 +2502,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  imdb_title_id  year_x      genre    country isWinner isPrimary isSecondary\n",
-       "0     tt0000574    1906  Biography  Australia      NaN       NaN         NaN\n",
-       "1     tt0000574    1906      Crime  Australia      NaN       NaN         NaN\n",
-       "2     tt0000574    1906      Drama  Australia      NaN       NaN         NaN\n",
-       "3     tt0001892    1911      Drama    Germany      NaN       NaN         NaN\n",
-       "4     tt0001892    1911      Drama    Germany      NaN       NaN         NaN"
+       "  imdb_title_id  year_x        genre    country isWinner isPrimary isSecondary\n",
+       "0     tt0000574    1906  Documentary  Australia      NaN       NaN         NaN\n",
+       "1     tt0000574    1906        Crime  Australia      NaN       NaN         NaN\n",
+       "2     tt0000574    1906        Drama  Australia      NaN       NaN         NaN\n",
+       "3     tt0001892    1911        Drama    Germany      NaN       NaN         NaN\n",
+       "4     tt0001892    1911        Drama    Denmark      NaN       NaN         NaN"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2522,23 +2521,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "172443\n"
+      "169153\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "120944"
+       "118780"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2561,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -2570,19 +2569,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3112931\n",
+      "356014\n",
       "81234\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\emmal\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
      ]
     },
     {
@@ -2620,11 +2608,11 @@
        "      <td>0</td>\n",
        "      <td>tt0000574</td>\n",
        "      <td>1906</td>\n",
-       "      <td>Biography</td>\n",
+       "      <td>Documentary</td>\n",
        "      <td>Australia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -2632,35 +2620,35 @@
        "      <td>1911</td>\n",
        "      <td>Drama</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>tt0002101</td>\n",
        "      <td>1912</td>\n",
        "      <td>Drama</td>\n",
        "      <td>United States of America</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <td>7</td>\n",
        "      <td>tt0002130</td>\n",
        "      <td>1911</td>\n",
        "      <td>Adventure</td>\n",
        "      <td>Italy</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>12</td>\n",
+       "      <td>10</td>\n",
        "      <td>tt0002199</td>\n",
        "      <td>1912</td>\n",
-       "      <td>Biography</td>\n",
+       "      <td>Documentary</td>\n",
        "      <td>United States of America</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
@@ -2671,22 +2659,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   imdb_title_id  year_x      genre                   country isWinner  \\\n",
-       "0      tt0000574    1906  Biography                 Australia      NaN   \n",
-       "3      tt0001892    1911      Drama                   Germany      NaN   \n",
-       "7      tt0002101    1912      Drama  United States of America      NaN   \n",
-       "9      tt0002130    1911  Adventure                     Italy      NaN   \n",
-       "12     tt0002199    1912  Biography  United States of America     True   \n",
+       "   imdb_title_id  year_x        genre                   country  isWinner  \\\n",
+       "0      tt0000574    1906  Documentary                 Australia     False   \n",
+       "3      tt0001892    1911        Drama                   Germany     False   \n",
+       "5      tt0002101    1912        Drama  United States of America     False   \n",
+       "7      tt0002130    1911    Adventure                     Italy     False   \n",
+       "10     tt0002199    1912  Documentary  United States of America      True   \n",
        "\n",
-       "   isPrimary isSecondary  \n",
-       "0        NaN         NaN  \n",
-       "3        NaN         NaN  \n",
-       "7        NaN         NaN  \n",
-       "9        NaN         NaN  \n",
-       "12      True       False  "
+       "    isPrimary  isSecondary  \n",
+       "0       False        False  \n",
+       "3       False        False  \n",
+       "5       False        False  \n",
+       "7       False        False  \n",
+       "10       True        False  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
