encoding sunburst csv in utf-8

--- a/Preprocess/Context_Preprocess.ipynb
+++ b/Preprocess/Context_Preprocess.ipynb
@@ -736,7 +736,7 @@
        "                            Verona Film Club Award  Winners   Films     Verona Film Club Award                          1\n",
        "                            Volpi Cup               Winners   People    Best Actor                                      1\n",
        "                                                                        Best Actress                                    1\n",
-       "Length: 22610, dtype: int64"
+       "Length: 22609, dtype: int64"
       ]
      },
      "execution_count": 12,
@@ -761,9 +761,106 @@
     "tops.isWinner = tops.isWinner.apply(rename_winner)\n",
     "tops.isPerson = tops.isPerson.apply(rename_person)\n",
     "tops.awardName = tops.awardName.apply(lambda x : x.replace(' - ', ' '))\n",
-    "tops.categoryName = tops.categoryName.apply(lambda x : x.replace('-', ' '))\n",
+    "tops.categoryName = tops.categoryName.apply(lambda x : x.replace('-', ' ').replace('  ', ''))\n",
     "second = tops.groupby(['eventName','year','awardName', 'isWinner','isPerson', 'categoryName']).size()\n",
     "second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>categoryName</th>\n",
+       "      <th>year</th>\n",
+       "      <th>eventName</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>awardName</th>\n",
+       "      <th>isWinner</th>\n",
+       "      <th>isPerson</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Glasshütte Original Documentary Award</th>\n",
+       "      <th>Nominees</th>\n",
+       "      <th>Films</th>\n",
+       "      <td>Glasshütte Original Documentary Award</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Berlin International Film Festival</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Winners</th>\n",
+       "      <th>Films</th>\n",
+       "      <td>Glashütte Original Documentary Award</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Berlin International Film Festival</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                  categoryName  \\\n",
+       "awardName                             isWinner isPerson                                          \n",
+       "Glasshütte Original Documentary Award Nominees Films     Glasshütte Original Documentary Award   \n",
+       "                                      Winners  Films      Glashütte Original Documentary Award   \n",
+       "\n",
+       "                                                         year  \\\n",
+       "awardName                             isWinner isPerson         \n",
+       "Glasshütte Original Documentary Award Nominees Films     2019   \n",
+       "                                      Winners  Films     2019   \n",
+       "\n",
+       "                                                                                  eventName  \\\n",
+       "awardName                             isWinner isPerson                                       \n",
+       "Glasshütte Original Documentary Award Nominees Films     Berlin International Film Festival   \n",
+       "                                      Winners  Films     Berlin International Film Festival   \n",
+       "\n",
+       "                                                         0  \n",
+       "awardName                             isWinner isPerson     \n",
+       "Glasshütte Original Documentary Award Nominees Films     6  \n",
+       "                                      Winners  Films     1  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = second.reset_index(level = 0).reset_index(level = 0).reset_index(level = 3)\n",
+    "test[test.eventName.apply(lambda x: x == 'Berlin International Film Festival') & test.year.apply(lambda x : x == 2019) & test.categoryName.apply(lambda x : 'Original Documentary' in x)]"
    ]
   },
   {
@@ -790,12 +887,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('sunburst_data.csv', final, delimiter=',', fmt = '%s')"
+    "np.savetxt('sunburst_data.csv', final, delimiter=',', fmt = '%s', encoding = 'utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
