solve particular case for sunburst

--- a/Preprocess/Context_Preprocess.ipynb
+++ b/Preprocess/Context_Preprocess.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "#remove some information given witht the name of the event\n",
     "awards['eventName'] = awards.eventName.apply(lambda x : x.split(',')[0])\n",
-    "\n",
+    "awards['categoryName'] = awards.categoryName.apply(lambda x : x.split(',')[0])\n",
     "#as a result some event names are duplicated, so we attribute the same ID to these duplicated names\n",
     "awards = awards.replace({'eventId': 'ev0000125'}, 'ev0000123').replace({'eventId': 'ev0000124'}, 'ev0000123').replace({'eventId': 'ev0001588'}, 'ev0000291')"
    ]
@@ -724,19 +724,19 @@
     {
      "data": {
       "text/plain": [
-       "eventName             year  awardName               isWinner  isPerson  categoryName                                \n",
-       "Academy Awards        1929  Honorary Award          Winners   Films     Honorary Award                                  2\n",
-       "                            Oscar                   Nominees  Films     Best Art Direction                              2\n",
-       "                                                                        Best Cinematography                             3\n",
-       "                                                                        Best Picture, Production                        2\n",
-       "                                                                        Best Picture, Unique and Artistic Production    2\n",
-       "                                                                                                                       ..\n",
-       "Venice Film Festival  2019  Venice Horizons Award   Winners   People    Best Actress                                    1\n",
-       "                                                                        Best Director                                   1\n",
-       "                            Verona Film Club Award  Winners   Films     Verona Film Club Award                          1\n",
-       "                            Volpi Cup               Winners   People    Best Actor                                      1\n",
-       "                                                                        Best Actress                                    1\n",
-       "Length: 22609, dtype: int64"
+       "eventName             year  awardName               isWinner  isPerson  categoryName          \n",
+       "Academy Awards        1929  Honorary Award          Winners   Films     Honorary Award            2\n",
+       "                            Oscar                   Nominees  Films     Best Art Direction        2\n",
+       "                                                                        Best Cinematography       3\n",
+       "                                                                        Best Picture              4\n",
+       "                                                                        Best Writing              4\n",
+       "                                                                                                 ..\n",
+       "Venice Film Festival  2019  Venice Horizons Award   Winners   People    Best Actress              1\n",
+       "                                                                        Best Director             1\n",
+       "                            Verona Film Club Award  Winners   Films     Verona Film Club Award    1\n",
+       "                            Volpi Cup               Winners   People    Best Actor                1\n",
+       "                                                                        Best Actress              1\n",
+       "Length: 21098, dtype: int64"
       ]
      },
      "execution_count": 12,
@@ -768,104 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>categoryName</th>\n",
-       "      <th>year</th>\n",
-       "      <th>eventName</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>awardName</th>\n",
-       "      <th>isWinner</th>\n",
-       "      <th>isPerson</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Glasshütte Original Documentary Award</th>\n",
-       "      <th>Nominees</th>\n",
-       "      <th>Films</th>\n",
-       "      <td>Glasshütte Original Documentary Award</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Berlin International Film Festival</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Winners</th>\n",
-       "      <th>Films</th>\n",
-       "      <td>Glashütte Original Documentary Award</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Berlin International Film Festival</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                  categoryName  \\\n",
-       "awardName                             isWinner isPerson                                          \n",
-       "Glasshütte Original Documentary Award Nominees Films     Glasshütte Original Documentary Award   \n",
-       "                                      Winners  Films      Glashütte Original Documentary Award   \n",
-       "\n",
-       "                                                         year  \\\n",
-       "awardName                             isWinner isPerson         \n",
-       "Glasshütte Original Documentary Award Nominees Films     2019   \n",
-       "                                      Winners  Films     2019   \n",
-       "\n",
-       "                                                                                  eventName  \\\n",
-       "awardName                             isWinner isPerson                                       \n",
-       "Glasshütte Original Documentary Award Nominees Films     Berlin International Film Festival   \n",
-       "                                      Winners  Films     Berlin International Film Festival   \n",
-       "\n",
-       "                                                         0  \n",
-       "awardName                             isWinner isPerson     \n",
-       "Glasshütte Original Documentary Award Nominees Films     6  \n",
-       "                                      Winners  Films     1  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = second.reset_index(level = 0).reset_index(level = 0).reset_index(level = 3)\n",
-    "test[test.eventName.apply(lambda x: x == 'Berlin International Film Festival') & test.year.apply(lambda x : x == 2019) & test.categoryName.apply(lambda x : 'Original Documentary' in x)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
